# trepro

./: README.md  pyproject.toml
examples/: savefig.py
src/trepro/: __init__.py  matplotlib.py  savefig.py
tests/: test_savefig.py
